Add selection color

--- a/css/handle-motion.webflow.css
+++ b/css/handle-motion.webflow.css
@@ -6,6 +6,11 @@
   font-display: swap;
 }
 
+::selection {
+  background-color: #ff0000;
+  color: #fff;
+}
+
 h1 {
   color: #fff;
   margin-top: 0;
