--- a/css/handle-motion.webflow.css
+++ b/css/handle-motion.webflow.css
@@ -177,6 +177,91 @@ a {
   grid-area: span 1 / span 1 / span 1 / span 1;
 }
 
+/* Responsive styles */
+@media screen and (max-width: 991px) {
+  .home-section {
+    flex-direction: column;
+    padding: 40px 20px;
+    gap: 60px;
+  }
+
+  .home-left, .home-right {
+    width: 100%;
+    max-width: 100%;
+  }
+
+  .home-right {
+    flex-direction: column;
+    gap: 80px;
+  }
+
+  .content-p-div {
+    flex-direction: column;
+    gap: 20px;
+  }
+
+  .rodrigo-pfp {
+    width: 100%;
+    margin: 0 auto;
+    object-fit: contain;
+  }
+
+  .intro-p, .contact-div, .socials-div {
+    width: 100%;
+  }
+
+  .content-div {
+    grid-column-gap: 60px;
+    grid-row-gap: 60px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  h1 {
+    font-size: 20px;
+  }
+
+  p, a {
+    font-size: 14px;
+  }
+
+  .home-section {
+    padding: 30px 15px;
+    gap: 40px;
+  }
+
+  .intro-div {
+    grid-column-gap: 40px;
+    grid-row-gap: 40px;
+  }
+
+  .content-div {
+    grid-column-gap: 40px;
+    grid-row-gap: 40px;
+  }
+}
+
+@media screen and (max-width: 479px) {
+  .home-section {
+    padding: 25px 15px;
+    gap: 30px;
+  }
+
+  .rodrigo-pfp {
+    max-width: 500px;
+    width: 100%;
+  }
+
+  .intro-div {
+    grid-column-gap: 30px;
+    grid-row-gap: 30px;
+  }
+
+  .content-div {
+    grid-column-gap: 30px;
+    grid-row-gap: 30px;
+  }
+}
 
 @font-face {
   font-family: 'TWK Lausanne 350';
